feat(core): Add PDF merging and flattening functionality
Introduces new conversion modes for merging multiple PDFs into one and flattening interactive elements within PDFs.

This update includes:
- Integration of `pdf-lib` for advanced PDF manipulation.
- Updates to `types.ts` to include `MERGE_PDF` and `FLATTEN_PDF` conversion modes.
- Enhancements to `DropZone.tsx` to correctly handle file types for new modes.
- Modifications to `pdfService.ts` to implement `mergePdfs` and `flattenPdfs` functions.
- Updates to `App.tsx` to expose and manage these new functionalities.
- Refinements to `ImageEditor.tsx` to include more drawing tools and history management.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     "react-dom/": "https://esm.sh/react-dom@18.3.1&dev/",
     "pdfjs-dist": "https://esm.sh/pdfjs-dist@3.11.174",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
+    "pdf-lib": "https://esm.sh/pdf-lib@1.17.1",
     "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react,react-dom",
     "react-dropzone": "https://esm.sh/react-dropzone@14.2.3?external=react,react-dom",
     "jszip": "https://esm.sh/jszip@3.10.1",
