--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ParsePDF - Privacy-First Document Tools</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>ParsePDF - 클라우드 X • 개인정보 보호</title>
+    <meta name="title" content="클라우드 X • 개인정보 보호 - 문서 관리의 새로운 기준" />
+    <meta name="description" content="브라우저에서 직접 PDF를 이미지로 변환하거나 이미지를 PDF로 합치세요. 빠르고, 안전하고, 단순합니다." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://parsepdf.com/" />
+    <meta property="og:title" content="클라우드 X • 개인정보 보호 - 문서 관리의 새로운 기준" />
+    <meta property="og:description" content="브라우저에서 직접 PDF를 이미지로 변환하거나 이미지를 PDF로 합치세요. 빠르고, 안전하고, 단순합니다." />
+    <meta property="og:image" content="https://r2-images.dacon.co.kr/external/DAKER.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://parsepdf.com/" />
+    <meta property="twitter:title" content="클라우드 X • 개인정보 보호 - 문서 관리의 새로운 기준" />
+    <meta property="twitter:description" content="브라우저에서 직접 PDF를 이미지로 변환하거나 이미지를 PDF로 합치세요. 빠르고, 안전하고, 단순합니다." />
+    <meta property="twitter:image" content="https://r2-images.dacon.co.kr/external/DAKER.svg" />
+
     <!-- We keep Tailwind CDN for simplicity in this specific setup without local CSS files, 
          though production builds ideally use PostCSS. -->
     <script src="https://cdn.tailwindcss.com"></script>
