feat: Update metadata and icons
Refactors meta tags for better SEO and clarity. Updates Open Graph and Twitter card images and descriptions to accurately reflect the application's branding and features. Removes an unused favicon link.

Also removes redundant effects from App.tsx that auto-expanded the results panel, simplifying the UI logic. Minor cleanups in ImageEditor.tsx and SortableFileCard.tsx for improved drag-and-drop experience and component structure.

--- a/index.html
+++ b/index.html
@@ -2,28 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="https://r2-images.dacon.co.kr/external/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- Primary Meta Tags -->
-    <title>ParsePDF - 클라우드 X • 개인정보 보호</title>
-    <meta name="title" content="클라우드 X • 개인정보 보호 - 문서 관리의 새로운 기준" />
-    <meta name="description" content="브라우저에서 직접 PDF를 이미지로 변환하거나 이미지를 PDF로 합치세요. 빠르고, 안전하고, 단순합니다." />
-
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://parsepdf.com/" />
-    <meta property="og:title" content="클라우드 X • 개인정보 보호 - 문서 관리의 새로운 기준" />
-    <meta property="og:description" content="브라우저에서 직접 PDF를 이미지로 변환하거나 이미지를 PDF로 합치세요. 빠르고, 안전하고, 단순합니다." />
-    <meta property="og:image" content="https://r2-images.dacon.co.kr/external/DAKER.svg" />
+    <meta property="og:title" content="ParsePDF - Privacy-First Document Tools" />
+    <meta property="og:description" content="Convert PDFs to Images or merge images into PDFs directly in your browser. Brutally simple, fast, and secure. No server uploads." />
+    <meta property="og:image" content="/og-image.svg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://parsepdf.com/" />
-    <meta property="twitter:title" content="클라우드 X • 개인정보 보호 - 문서 관리의 새로운 기준" />
-    <meta property="twitter:description" content="브라우저에서 직접 PDF를 이미지로 변환하거나 이미지를 PDF로 합치세요. 빠르고, 안전하고, 단순합니다." />
-    <meta property="twitter:image" content="https://r2-images.dacon.co.kr/external/DAKER.svg" />
+    <meta property="twitter:title" content="ParsePDF - Privacy-First Document Tools" />
+    <meta property="twitter:description" content="Convert PDFs to Images or merge images into PDFs directly in your browser. Brutally simple, fast, and secure. No server uploads." />
+    <meta property="twitter:image" content="/og-image.svg" />
 
+    <title>ParsePDF - Privacy-First Document Tools</title>
     <!-- We keep Tailwind CDN for simplicity in this specific setup without local CSS files, 
          though production builds ideally use PostCSS. -->
     <script src="https://cdn.tailwindcss.com"></script>
