feat: Add PDF to PPTX conversion functionality
Introduces the capability to convert PDF documents into PPTX (PowerPoint) format. This involves adding a new conversion mode, updating dependencies, and integrating the `pptxgenjs` library to handle the conversion logic. The UI now supports selecting PDF to PPTX as a conversion option, and the `DropZone` component has been adjusted to handle the input requirements for this new mode.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
     "@dnd-kit/sortable": "https://esm.sh/@dnd-kit/sortable@8.0.0?external=react,react-dom,@dnd-kit/core",
     "@dnd-kit/utilities": "https://esm.sh/@dnd-kit/utilities@3.2.2?external=react,react-dom",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.2.1",
-    "vite": "https://esm.sh/vite@^5.1.6"
+    "vite": "https://esm.sh/vite@^5.1.6",
+    "pptxgenjs": "https://esm.sh/pptxgenjs@^4.0.1"
   }
 }
 </script>
