feat: Integrate AI for PPTX generation
Adds AI-powered conversion capabilities from PDF to PPTX by introducing the Google Generative AI library and new process statuses. This enables analysis of PDF content and generation of presentation slides.

New types and utilities are added to support PPTX slide structure and AI analysis, alongside initial integration points in the UI and services layer.

Includes a new PptxEditor component for client-side manipulation of generated slides.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
     "@dnd-kit/utilities": "https://esm.sh/@dnd-kit/utilities@3.2.2?external=react,react-dom",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.2.1",
     "vite": "https://esm.sh/vite@^5.1.6",
-    "pptxgenjs": "https://esm.sh/pptxgenjs@^4.0.1"
+    "pptxgenjs": "https://esm.sh/pptxgenjs@^4.0.1",
+    "@google/genai": "https://esm.sh/@google/genai@^1.40.0"
   }
 }
 </script>
